[project]
name = "ai4gcnpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yuliu", email = "yuliu@gzu.edu.cn" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "jinja2>=3.1.6",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "neo4j~=5.19.0",
    "neo4j-graphrag",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
gcn-cli = "ai4gcnpy.cli:app"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
